# some-equation

./: CMakeLists.txt  CMakePresets.json  Equation.h  EquationTest.h  Test1.cpp  Test2.cpp  Test3.cpp  Test4.cpp  Test5.cpp  main.cpp
